Added some features
Added launch sequence in splash screen and also dial, but dial is still not complete

--- a/UI_Functions/splash_screen.ui
+++ b/UI_Functions/splash_screen.ui
@@ -77,7 +77,7 @@ background-color:transparent;</string>
        <property name="geometry">
         <rect>
          <x>50</x>
-         <y>370</y>
+         <y>360</y>
          <width>731</width>
          <height>23</height>
         </rect>
@@ -167,7 +167,7 @@ background-color:transparent;</string>
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>260</y>
+         <y>250</y>
          <width>811</width>
          <height>61</height>
         </rect>
@@ -181,24 +181,7 @@ background-color:transparent;</string>
        <property name="frameShadow">
         <enum>QFrame::Raised</enum>
        </property>
-       <layout class="QHBoxLayout" name="horizontalLayout_2">
-        <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
-         <widget class="spiralProgressBar" name="progressBar_2" native="true">
-          <property name="minimumSize">
-           <size>
-            <width>45</width>
-            <height>40</height>
-           </size>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>45</width>
-            <height>40</height>
-           </size>
-          </property>
-         </widget>
-        </item>
-       </layout>
+       <layout class="QHBoxLayout" name="horizontalLayout_2"/>
       </widget>
       <widget class="QLabel" name="loading_lbl">
        <property name="geometry">
@@ -211,7 +194,7 @@ background-color:transparent;</string>
        </property>
        <property name="font">
         <font>
-         <pointsize>10</pointsize>
+         <pointsize>12</pointsize>
         </font>
        </property>
        <property name="styleSheet">
@@ -223,20 +206,15 @@ background-color:transparent;</string>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
+       <property name="wordWrap">
+        <bool>true</bool>
+       </property>
       </widget>
      </widget>
     </item>
    </layout>
   </widget>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>spiralProgressBar</class>
-   <extends>QWidget</extends>
-   <header>PySide2extn.SpiralProgressBar.h</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
