--- a/UI_Functions/splash_screen.ui
+++ b/UI_Functions/splash_screen.ui
@@ -84,6 +84,9 @@
           <property name="leftMargin">
            <number>262</number>
           </property>
+          <property name="topMargin">
+           <number>0</number>
+          </property>
           <property name="rightMargin">
            <number>262</number>
           </property>
@@ -91,7 +94,7 @@
            <number>0</number>
           </property>
           <item>
-           <widget class="QLabel" name="logo_lbl">
+           <widget class="QLabel" name="logo">
             <property name="minimumSize">
              <size>
               <width>286</width>
