--- a/UI_Functions/splash_screen.ui
+++ b/UI_Functions/splash_screen.ui
@@ -70,7 +70,10 @@
          <property name="styleSheet">
           <string notr="true">QFrame {	
 	 
-	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(0, 0, 0, 255), stop:1 rgba(109, 11, 255, 255));
+	/*background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(0, 0, 0, 255), stop:1 rgba(109, 11, 255, 255));*/
+
+	
+	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(100, 188, 203, 255), stop:1 rgba(118, 215, 223, 255));
 
 
 	color: rgb(220, 220, 220);
@@ -262,7 +265,10 @@ QProgressBar::chunk{
 	border-radius: 10px;
 	/*background-color: qlineargradient(spread:pad, x1:0, y1:0.511364, x2:1, y2:0.523, stop:0 rgba(254, 121, 199, 255), stop:1 rgba(170, 85, 255, 255));*/
 	
-	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0.977273, y2:1, stop:0 rgba(177, 45, 85, 255), stop:1 rgba(255, 170, 0, 220));
+	/*background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0.977273, y2:1, stop:0 rgba(177, 45, 85, 255), stop:1 rgba(255, 170, 0, 220));*/
+
+	
+	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(34, 204, 156, 255), stop:1 rgba(98, 192, 255, 255));
 
 	
 	
